[chore] separated Integration tests from unit tests